Fixed introduction and added resume

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 						<header class="major">
 							<h2>My name is David</h2>
 							<p>I am a passionate Software Developer.</p>
+							<p>If you want to take a look at my resume click <a href="resume/David Giang Resume.pdf">here.</a></p>
+							<p>A few of my projects are listed below, and you can send me a message if you want to chat! Having fun exploring and learning more about me.</p>
 						</header>
 					</div>
 					<div class="column"><img class="headshot" src="images/Headshot.jpg" alt="Headshot image" /></div>
