testing email functionality

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<h2>My name is David</h2>
 							<p>I am a passionate Software Developer.</p>
 							<p>If you want to take a look at my resume click <a href="resume/David Giang Resume.pdf">here.</a></p>
-							<p>A few of my projects are listed below, and you can send me a message if you want to chat! Having fun exploring and learning more about me.</p>
+							<p>A few of my projects are listed below, and you can send me a message if you want to chat! Having fun exploring and learning more about the personal projects I've built.</p>
 						</header>
 					</div>
 					<div class="column"><img class="headshot" src="images/Headshot.jpg" alt="Headshot image" /></div>
@@ -70,28 +70,44 @@
 			<section class="posts">
 				<article>
 					<header>
-						<span class="date">April 24, 2017</span>
-						<h2><a href="#">Sed magna<br />
-								ipsum faucibus</a></h2>
+						<h2><a href="#">ANATOMY FITNESS</a></h2>
 					</header>
-					<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
-						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+					<a class="image fit"><img src="images/anatomy_fitness.png" alt="" /></a>
+					<p>This is an iOS fitness trainer built with Swift and Xcode. The purpose of the app is to allow users to view exercises for any muscle group they want to target. The app uses <a href="https://wger.de/en/software/api">wger</a> for exercises.</p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Full Story</a></li>
+						<li><a href="https://github.com/davidgiang/Anatomy-Fitness" class="button">Go to repo!</a></li>
 					</ul>
 				</article>
 				<article>
 					<header>
-						<span class="date">April 22, 2017</span>
-						<h2><a href="#">Primis eget<br />
-								imperdiet lorem</a></h2>
+						<h2><a href="#">EPIC 7<br />
+								AUTO SECRET SHOPPER</a></h2>
 					</header>
-					<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
-						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+					<a class="image fit"><img src="images/secret_shop_img.png" alt="" /></a>
+					<p>This is an automation project built with PyAutoGui for image recognition and automatic mouse movement. Tkinter was used for the GUI.</p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Full Story</a></li>
+						<li><a href="https://github.com/davidgiang/Epic-7-Auto-Secret-Shop" class="button">Go to repo!</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<h2><a href="#">EPIC 7<br />
+								AUTO FRIENDSHIP FARMER</a></h2>
+					</header>
+					<a class="image fit"><img src="images/friendship_farm_img.png" alt="" /></a>
+					<p>Similar to the Auto Secret Shopper but repurposed for another activity.</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/davidgiang/Epic-7-Auto-Friendship-Farm" class="button">Go to repo!</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<h2><a href="#">OLD PERSONAL WEBPAGE</a></h2>
+					</header>
+					<a class="image fit"><img src="images/hs_website.png" alt="" /></a>
+					<p>This was an old high school project where I learned about HTML and CSS.</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/davidgiang/HS-Website-Project" class="button">Go to repo!</a></li>
 					</ul>
 				</article>
 			</section>
@@ -100,7 +116,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
-				<form method="post" action="#">
+				<form method="post" action="mail.php">
 					<div class="fields">
 						<div class="field">
 							<label for="name">Name</label>
