random-like string

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
-				<form method="post" action="https://formsubmit.co/davidgiang.413@gmail.com">
+				<form method="post" action="https://formsubmit.co/a1db9ed3959dbc323c5ed1b611765eb2">
 					<div class="fields">
 						<div class="field">
 							<label for="name">Name</label>
