fixed redirect from contact

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 		<footer id="footer">
 			<section>
 				<form method="post" action="https://formsubmit.co/a1db9ed3959dbc323c5ed1b611765eb2">
+					<input type="hidden" name="_next" value="https://davidgiang.github.io/portfolio/">
 					<div class="fields">
 						<div class="field">
 							<label for="name">Name</label>
